# wind-tunnel-runner-status-dashboard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: cargo_update.yaml  docker-publish.yml  flake_update.yaml  infra_deploy.yaml  test.yml
infra/: Pulumi.wind-tunnel-runner-status-dashboard.yaml  Pulumi.yaml  go.mod  go.sum  main.go
src/: lib.rs  main.rs  nomad.rs  routes.rs
static/: script.js  style.css
tests/: smoke.rs
